--- a/Reportes/01_Silicio_y_Siliceno/main.tex
+++ b/Reportes/01_Silicio_y_Siliceno/main.tex
@@ -30,6 +30,9 @@
     
 \section{Métodos computacionales}
     \input{metodos_computacionales.tex}
+
+\section{Pseudopotenciales}
+    \input{pseudopotenciales.tex}
                             
 \section{Simulación estructural y electrónica del silicio.}	
     \input{silicio.tex}  
