--- a/Reportes/01_Silicio_y_Siliceno/abstract.tex
+++ b/Reportes/01_Silicio_y_Siliceno/abstract.tex
@@ -3,13 +3,12 @@
 
 En este documento se presenta la actividad 1 del proyecto de investigación en Nanociencia,
 usando la Teoría Funcional de la Densidad (DFT). 
-En este mismo se reportan los resultados de las simulaciones de una serie de cálculos 
-realizados con el silicio y el siliceno con el fin de describir las características electrónicas de sus
+En este mismo se reportan los resultados de una serie de cálculos 
+realizados con el silicio, el siliceno y el silicano con el fin de describir las características electrónicas de sus
 celdas unitarias; ademas se reportan datos recabados en la literatura de dichos 
-materiales además del silicano.
+materiales.
 
 
-Se econtraron los parametros de red del silicio, siliceno y silicano, los cálculos mostraron
-que se encontraban cercanos a 5.4, 3.8 y 3.9 amstrongs, respectivamente. 
-Ádemas se hicieron cálculos de bandas y densidad de estados para posteriormente 
-gráficarlos.
+Se encontraron los parametros de red del silicio, siliceno y silicano, los cálculos mostraron
+que se encontraban cercanos a 5.47, 3.892 y 3.92 amstrongs, respectivamente. 
+Ádemas se hicieron cálculos de bandas y densidad de estados para el siliceno y el silicano.
