--- a/Reportes/01_Silicio_y_Siliceno/actividad.tex
+++ b/Reportes/01_Silicio_y_Siliceno/actividad.tex
@@ -5,8 +5,9 @@
 Objetivos:
 
 \begin{itemize}
+    \small
     \item Optimización de ecutwfc
-    \item Optimización de ecut
+    \item Optimización de ecutrho
     \item Optimización de puntos k
     \item Optimización de parámetro de red
 \end{itemize}
@@ -20,8 +21,27 @@ Objetivos:
 Objetivos:
 
 \begin{itemize}
+    \small
     \item Optimización de puntos k
     \item Optimización de parámetro de red
+    \item Cálculo de bandas
+    \item Densidad de estados
+\end{itemize}
+
+\textbf{Simulación estructural y electrónica del Silicano.}
+
+\vspace{0.4cm}
+
+Objetivos:
+
+\begin{itemize}
+    \small
+    \item Optimización de ecutwfc
+    \item Optimización de ecutrho
+    \item Optimización de puntos k
+    \item Optimización de parámetro de red
+    \item Cálculo de bandas
+    \item Densidad de estados
 \end{itemize}
 
 \vspace{0.4cm}
@@ -30,7 +50,7 @@ Objetivos:
 
 \begin{itemize}
     \item Hacer una búsqueda en la literatura (artículos cientificos) de los parámetros 
-          estructurales (parámetro de red, longitud de enlacee, ángulos) y propiedades
+          estructurales (parámetro de red, longitud de enlace, ángulos) y propiedades
           electrónicas (estructura de bandas electrónicas, densidad de estados electrónicos)
           del silicio, siliceno y silicano.
 \end{itemize}
