--- a/Reportes/01_Silicio_y_Siliceno/silicano.tex
+++ b/Reportes/01_Silicio_y_Siliceno/silicano.tex
@@ -304,7 +304,8 @@ Se llegó al siguiente gráfico:
     \caption{Gráfica que nos muestra la densidad de estados del siliceno, sin considerar el spin.}
 \end{figure}
 
-A continuación proporcionaremos una gráfica que nos muestra la energía por nivel orbital.
+A continuación proporcionaremos una gráfica que nos muestra la 
+densidad de estados por nivel orbital.
 
 \begin{figure}[H]
     \centering
@@ -320,7 +321,8 @@ A continuación proporcionaremos una gráfica que nos muestra la energía por ni
 
 \vspace{0.5cm}
 
-A continuación proporcionaremos una gráfica que nos muestra la energía por elemento.
+A continuación proporcionaremos una gráfica que nos muestra la densidad de 
+estados por elemento.
 
 \begin{figure}[H]
     \centering
